agregando mas archivos jueves 16 de marzo de 2017

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
             <div class="btn-env">
-                <input type="submit" name="v_ingresar" value="iniciar sesion">
+                <input type="submit" name="v_ingresar" value="iniciar sesion" id="btne">
 
             </div>
 
